# topological-adam

./: .gitignor file  .gitignore  ARC_2024.ipynb  AUDIT_REPORT_V3.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DISCOVERIES.md  ECOSYSTEM_ROLE.md  LICENSE  MANIFEST.in  PKG-INFO  README.md  ROADMAP.md  TOPOLOGICAL_ADAM_FINAL_REPORT.md  Topological-Adam-benchmark.ipynb  Topological_Adam_Physics_Benchmark.ipynb  benchmark  benchmark_v3_results.json  benchmark_v4_results.json  fresh_seed_confirmation.json  mhd_novel_experiments.py  paper (1).md  paper (4).md  paper.bib  paper.md  pip install topological-adam  pyproject.toml  pytest.ini  reference_training_results.json  requirements-dev.txt  requirements.txt  setup.py  ta_experiments.py  topological_adam_physics.ipynb  topological_adam_standalone.py
Topological-Adam-benchmark/: Benchmark
docs/: joss-readiness.md  mhd-connection.md  overview.md  reference-training-benchmark.md  results.md  sds-candidate.md  sds_candidate_benchmark.json  trajectory-topology.md
examples/: benchmark_candidate_suite.py  benchmark_v3_suite.py  benchmark_v4_suite.py  confirm_fresh_seeds.py  make_topology_figures.py  quickstart_v2.py  reconnection_stopping_demo.py  reference_training_benchmark.py  trajectory_topology_demo.py
tests/: README.md  __init__.py  test_analysis.py  test_benchmarks.py  test_convergence.py  test_optimizer_basic.py  test_optimizer_edge_cases.py  test_optimizer_integration.py  test_sds_candidate.py  test_stopping.py  test_v2_api.py  test_v3.py  test_v4.py
topological_adam.egg-info/: SOURCES.txt
(+19 files in other folders)
